--- a/estilo.css
+++ b/estilo.css
@@ -1,20 +1,72 @@
+h1{
+    font-size: 36px;
+    font-family: 'Kaushan Script',cursive;
+}
+h2{
+    font-size: 24px;
+    font-weight: normal;
+    font-family: 'Times New Roman';
+    padding-bottom: 13px;
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+h3{
+    text-align: center;
+    font-size: 13px;
+    font-family: 'Times New Roman';
+}
 #cabecalho{
     background-color: #6175f0;
     color: white;
     padding-left: 34px;
     padding-top: 20px;
 }
-#cabecalho h1{
-    font-size: 36px;
-    font-family: 'Kaushan Script',cursive;
-}
-#cabecalho h2{
-    font-size: 24px;
-    font-weight: normal;
-    font-family: 'Times New Roman';
-    padding-bottom: 13px;
-}
-
 #verdade img{
     float: left;
+    width: 310px;
+    padding-right: 13px;
+}
+#verdade p{
+    font-size: 14px;
+    font-family: 'Arial';
+}
+.referencia{
+    font-style: italic;
+}
+#hoje{
+    float: right;
+    width: 405px;
+    text-align: center;
+    background: #f8cef7;
+    margin-right: 25px;
+    border: 1px solid #ff56fb;
+}
+#hoje img{
+    display: block;
+    width: 112px;
+    height: 112px;
+    margin-left: auto;
+    margin-right: auto;
+}
+#hoje p{
+    text-align: center;
+    padding-left: 35px;
+    padding-right: 35px;
+}
+#musica{
+    box-sizing:content-box;
+    padding-top: 15px;
+    padding-left: 12px;
+    width:405px;
+}
+#musica p:nth-child(odd) {
+    padding-left: 34px;
+}
+.destacado{
+    display: block;
+    clear: inherit;
+    background: #c4caf3;
+}
+.destacado p:nth-child(odd){
+    padding-left: 34px;
 }
